<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_fragment"
    tools:context=".view.ClientViewFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="clientViewModel"
            type="com.launchdarkly.android.clientinspector.viewmodel.LdClientViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_mobile_key_label"
                tools:text="@string/client_mobile_key_label" />

            <EditText
                android:id="@+id/clientMobileKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!clientViewModel.isClientOnline}"
                android:inputType="textPersonName"
                android:text="@={clientViewModel.mobileKey}" />

            <Button
                android:id="@+id/connect_toggle_button"
                isOnline="@{clientViewModel.isClientOnline}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> clientViewModel.onConnectionToggleClicked()}"
                android:text="@string/connect_button_text" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/client_connection_status_label" />

                    <TextView
                        isOnline="@{clientViewModel.isClientOnline}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        tools:text="OFFLINE" />
                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Example Usage"
                    android:textSize="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={clientViewModel.exampleDescriptionText}" />

                <Button
                    android:id="@+id/flagged_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{(view) -> clientViewModel.onExampleButtonClicked(view)}"
                    android:text="@={clientViewModel.exampleButtonText}"
                    exampleButtonVisibility="@{clientViewModel.isExampleButtonVisible}" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>
